# fadroma-generic-factory

./: Cargo.toml  README.md
src/: lib.rs
