[package]
name = "generic-factory"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fadroma = { version = "0.8.7", features = ["scrt"] }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }

[dev-dependencies]
fadroma = { version = "0.8.7", features = ["scrt", "ensemble"] }
